# embedded_http_comparison

./: .gitignore  README.md  embedded_http_comparison.md
http_libdatachannel/: .gitignore  BUILD_STATUS.md  CMakeLists.txt  INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh
http_libdatachannel/examples/: chat_example.cpp
http_libdatachannel/include/: http_client.h  openai_client.h
http_libdatachannel/src/: http_client.cpp  openai_client.cpp
http_libdatachannel/test/: http_client_test.cpp
mg_http_client/: CMakeLists.txt  mhc.c  mhc.h
mg_http_client/docs/: bench_report.md
mg_http_client/docs/superpowers/plans/: 2026-04-18-mg-http-client.md
mg_http_client/docs/superpowers/specs/: 2026-04-18-mg-http-client-design.md
mg_http_client/test/: CMakeLists.txt  bench.c  server.py  test_basic.c
